[package]
name = "rt"
version = "0.1.0"
authors = ["Uncle Scientist <unclescientst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
getrandom = { version = "0.2", features = ["js"] }
specs = "0.16.1"
specs-derive = "0.4.1"
