[package]
name = "rt"
version = "0.1.0"
authors = ["Uncle Scientist <unclescientist@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
